public/css/glyphicons.css
/*!
 *
 *  Project:  GLYPHICONS
 *  Author:   Jan Kovarik - www.glyphicons.com
 *  Twitter:  @jankovarik
 *
 */
@font-face {
  font-family: 'Glyphicons';
  src: url('../fonts/glyphicons-regular.eot');
  src: url('../fonts/glyphicons-regular.eot?#iefix') format('embedded-opentype'), url('../fonts/glyphicons-regular.woff') format('woff'), url('../fonts/glyphicons-regular.ttf') format('truetype'), url('../fonts/glyphicons-regular.svg#glyphicons_halflingsregular') format('svg');
  font-weight: normal;
  font-style: normal;
}
.glyphicons {
  display: inline-block;
  position: relative;
  padding: 0.4em 1em 0.4em 0em;
  color: #1d1d1b;
  text-decoration: none;
  *display: inline;
  *zoom: 1;
}

.glyphicons i:before {
  position: absolute;
  left: 0;
  top: 0;
  line-height: 1em;
  font-size: inherit;
  font-family: 'Glyphicons';
  font-style: normal;
  color: #1d1d1b;
}

.comment-icon.glyphicons {
  padding: 0.2em 1em 0.7em 0em;
}

.comment-icon.glyphicons i:before {
  color: #bbbbbb;
  font-size: 1.2em;
}

a.glyphicons:hover i:before {
  color: rgb(53, 130, 245);
}
.glyphicons.white i:before {
  color: #fff;
}
.glyphicons.glass i:before {
  content: "\e001";
}
.glyphicons.leaf i:before {
  content: "\e002";
}
.glyphicons.dog i:before {
  content: "\e003";
}
.glyphicons.user i:before {
  content: "\e004";
}
.glyphicons.girl i:before {
  content: "\e005";
}
.glyphicons.car i:before {
  content: "\e006";
}
.glyphicons.user_add i:before {
  content: "\e007";
}
.glyphicons.user_remove i:before {
  content: "\e008";
}
.glyphicons.film i:before {
  content: "\e009";
}
.glyphicons.magic i:before {
  content: "\e010";
}
.glyphicons.envelope i:before {
  content: "\2709";
}
.glyphicons.camera i:before {
  content: "\e012";
}
.glyphicons.heart i:before {
  content: "\e013";
}
.glyphicons.beach_umbrella i:before {
  content: "\e014";
}
.glyphicons.train i:before {
  content: "\e015";
}
.glyphicons.print i:before {
  content: "\e016";
}
.glyphicons.bin i:before {
  content: "\e017";
}
.glyphicons.music i:before {
  content: "\e018";
}
.glyphicons.note i:before {
  content: "\e019";
}
.glyphicons.heart_empty i:before {
  content: "\e020";
}
.glyphicons.home i:before {
  content: "\e021";
}
.glyphicons.snowflake i:before {
  content: "\2744";
}
.glyphicons.fire i:before {
  content: "\e023";
}
.glyphicons.magnet i:before {
  content: "\e024";
}
.glyphicons.parents i:before {
  content: "\e025";
}
.glyphicons.binoculars i:before {
  content: "\e026";
}
.glyphicons.road i:before {
  content: "\e027";
}
.glyphicons.search i:before {
  content: "\e028";
}
.glyphicons.cars i:before {
  content: "\e029";
}
.glyphicons.notes_2 i:before {
  content: "\e030";
}
.glyphicons.pencil i:before {
  content: "\270F";
}
.glyphicons.bus i:before {
  content: "\e032";
}
.glyphicons.wifi_alt i:before {
  content: "\e033";
}
.glyphicons.luggage i:before {
  content: "\e034";
}
.glyphicons.old_man i:before {
  content: "\e035";
}
.glyphicons.woman i:before {
  content: "\e036";
}
.glyphicons.file i:before {
  content: "\e037";
}
.glyphicons.coins i:before {
  content: "\e038";
}
.glyphicons.airplane i:before {
  content: "\2708";
}
.glyphicons.notes i:before {
  content: "\e040";
}
.glyphicons.stats i:before {
  content: "\e041";
}
.glyphicons.charts i:before {
  content: "\e042";
}
.glyphicons.pie_chart i:before {
  content: "\e043";
}
.glyphicons.group i:before {
  content: "\e044";
}
.glyphicons.keys i:before {
  content: "\e045";
}
.glyphicons.calendar i:before {
  content: "\e046";
}
.glyphicons.router i:before {
  content: "\e047";
}
.glyphicons.camera_small i:before {
  content: "\e048";
}
.glyphicons.dislikes i:before {
  content: "\e049";
}
.glyphicons.star i:before {
  content: "\e050";
}
.glyphicons.link i:before {
  content: "\e051";
}
.glyphicons.eye_open i:before {
  content: "\e052";
}
.glyphicons.eye_close i:before {
  content: "\e053";
}
.glyphicons.alarm i:before {
  content: "\e054";
}
.glyphicons.clock i:before {
  content: "\e055";
}
.glyphicons.stopwatch i:before {
  content: "\e056";
}
.glyphicons.projector i:before {
  content: "\e057";
}
.glyphicons.history i:before {
  content: "\e058";
}
.glyphicons.truck i:before {
  content: "\e059";
}
.glyphicons.cargo i:before {
  content: "\e060";
}
.glyphicons.compass i:before {
  content: "\e061";
}
.glyphicons.keynote i:before {
  content: "\e062";
}
.glyphicons.paperclip i:before {
  content: "\e063";
}
.glyphicons.power i:before {
  content: "\e064";
}
.glyphicons.lightbulb i:before {
  content: "\e065";
}
.glyphicons.tag i:before {
  content: "\e066";
}
.glyphicons.tags i:before {
  content: "\e067";
}
.glyphicons.cleaning i:before {
  content: "\e068";
}
.glyphicons.ruller i:before {
  content: "\e069";
}
.glyphicons.gift i:before {
  content: "\e070";
}
.glyphicons.umbrella i:before {
  content: "\2602";
}
.glyphicons.book i:before {
  content: "\e072";
}
.glyphicons.bookmark i:before {
  content: "\e073";
}
.glyphicons.wifi i:before {
  content: "\e074";
}
.glyphicons.cup i:before {
  content: "\e075";
}
.glyphicons.stroller i:before {
  content: "\e076";
}
.glyphicons.headphones i:before {
  content: "\e077";
}
.glyphicons.headset i:before {
  content: "\e078";
}
.glyphicons.warning_sign i:before {
  content: "\e079";
}
.glyphicons.signal i:before {
  content: "\e080";
}
.glyphicons.retweet i:before {
  content: "\e081";
}
.glyphicons.refresh i:before {
  content: "\e082";
}
.glyphicons.roundabout i:before {
  content: "\e083";
}
.glyphicons.random i:before {
  content: "\e084";
}
.glyphicons.heat i:before {
  content: "\e085";
}
.glyphicons.repeat i:before {
  content: "\e086";
}
.glyphicons.display i:before {
  content: "\e087";
}
.glyphicons.log_book i:before {
  content: "\e088";
}
.glyphicons.adress_book i:before {
  content: "\e089";
}
.glyphicons.building i:before {
  content: "\e090";
}
.glyphicons.eyedropper i:before {
  content: "\e091";
}
.glyphicons.adjust i:before {
  content: "\e092";
}
.glyphicons.tint i:before {
  content: "\e093";
}
/* ... */

